--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
         </div>
         <div id="01" class="envelope-wrapper">
             <div class="envelope">
-                <div class="letter">
-                    <div class="text">
-
-                    </div>
-                </div>
+                <div class="letter"></div>
             </div>
             <div class="heart"></div>
         </div>
@@ -48,6 +44,77 @@
             <span id="alert-en">Calma ansiosa, ainda não é a hora!</span>
         </div>
     </div>
+    <main class="main">
+        <div class="overflow">
+            <div class="content-main">
+                <p>
+                    Feliz aniversário, meu amor. Estou escrevendo pelo Word para então depois colocar na carta kkkkkk.
+                    Então
+                    ignore o fato de não ter emojis, mas saiba que se tivesse, sua tela estaria verde de tantos
+                    corações…
+                    <br>
+                    <br>
+                    Vidah, eu não sei nem por onde começar, de verdade, isso não é apenas por causa do seu aniversário,
+                    é
+                    por tudo! Hoje é um dia especial e incrivelmente incrível, já que a garota mais linda da face da
+                    terra
+                    está completando 2 décadas de vida, que na verdade já não é nem mais uma garota e sim uma mulher
+                    incrível.. eu admito que no começo, nunca imaginei que iriamos ficar juntos, minha mentalidade era
+                    literalmente só ficar com você e ir embora mesmo kkkkkk, mas nem adianta levar pro pessoal, com
+                    certeza
+                    você também só queria me pegar e tchau, e dependendo queria até dar pra mim antes de ficarmos
+                    juntos,
+                    porque em menos de um mês de namoro você liberou pra nunca mais. Mas a verdade é que eu realmente
+                    achava
+                    que namoro a distância não funcionava, não só apenas pela distância, mas também pela confiança que
+                    era
+                    necessária ter na outra pessoa. Você sabe que eu já sofri vários traumas, e também sabe que eu já
+                    pensei
+                    várias vezes que você tinha ou ia me trair, até hoje em dia eu penso nisso, mas muito menos do que
+                    antes, o tempo e o remédio me ajudaram com isso, você me ajudou com isso, já que você me provou mais
+                    uma
+                    vez que o mundo realmente não está completamente perdido, já que você me mostrou que o amor ainda
+                    existe
+                    mesmo em uma época onde as garotas só querem saber de dar, e chifrar, e os garotos de fumar, beber,
+                    usar
+                    drogas, chifrar também, comer e jogar fora. Ambos os lados estão podres, e não é o podre que você
+                    usa
+                    comigo quando eu digo que quero meter a língua na tua buceta, porque pqp, como eu quero, o caralho,
+                    vai
+                    ser gostosa assim no meu pau, literalmente, a vontade que eu tô de te botar pelada naquele sofá de
+                    casa
+                    e te chupar todinha é imensa, pqp….. se prepare pro final do ano, porque eu vou te comer todo dia e
+                    ai
+                    de reclamar.
+                    <br>
+                    <br>
+                    A verdade é que eu te amo amor, e te amo muito, você é mais do que incrível pra mim, você significa
+                    muito pra mim, eu quero me casar com você, construir uma casa com você, uma casa onde nós podemos
+                    chamar
+                    de NOSSO lar, aonde vamos viver e construir inúmeras coisas juntos, muito mais do que já
+                    construímos,
+                    quero ter uma filhinha com você, para botarmos o nome de Hayla, ou um filhinho também, para se
+                    chamar
+                    Henry. Eu quero continuar do jeito que estamos, bem, saudáveis, o primeiro relacionamento que eu
+                    tive
+                    que não é tóxico. Amor eu de verdade espero que você nunca vá me trair, porque isso acabaria comigo
+                    em
+                    uma calamidade catastrófica, e espero que você não queira me trocar também, nem terminar comigo e
+                    largar
+                    tudo o que construímos juntos para trás. E não adianta falar que isso não é possível, é sim
+                    possível, se
+                    já aconteceu com pessoas que passaram juntas durante 10, 20, 30 anos, pode acontecer com a gente
+                    também,
+                    que passou apenas 2 anos, mas isso não muda o fato de ter sido os 2 anos mais incríveis da minha
+                    vida,
+                    eu agradeço por tudo, eu te amo muito meu amor, muito muito muito!! Agora, aproveite o seu dia, meu
+                    amor, porque hoje o dia é seu! Feliz aniversáriooooooooo, meu amooooooooor!! Eu te desejo tudo de
+                    bom
+                    vidah, você merece o mundo, mas o mundo não te merece, você é incrível, ti amuuuuuuu moh!!
+                </p>
+            </div>
+        </div>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 
